changed keywords and author order and pdftitle

--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -801,7 +801,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 
 
 % TB: information originally in the main body; but it is style information, so I have included it here. Modified Æ
-\hypersetup{pdfinfo={Title={forall x: Adelaide Version}, Author={P.D. Magnus, Tim Button, Antony Eagle}, Subject={An open access introductory textbook in formal logic}, Keywords={truth-functional logic, propositional logic, predicate logic, first-order logic, natural deduction, fitch}}, %
+\hypersetup{pdfinfo={Title={forall x: Adelaide}, Author={Antony Eagle, Tim Button, and P.D. Magnus}, Subject={An open access introductory textbook in formal logic}, Keywords={truth-functional logic, propositional logic, predicate logic, first-order logic, natural deduction, fitch, philosophical logic}}, %
 %	bookmarks={true}, %
 	colorlinks={true}, %
 	linkcolor={orange},
