--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -667,7 +667,7 @@ Both of these arguments have the same structure. Let's focus on the second, exam
 
 A better alternative might be to think that the conditional `if God exists, she answers malevolent prayers' is not to be symbolised by `$\eif$'. This conditional is false, many think: they may think, for example, that it is part of the concept of God that God is good, and hence would not grant prayers with evil intent. Even the atheist might accept this, maybe because they accept the subjunctive conditional `even if God were to exist, God would not answer malevolent prayers' (§\ref{s:IndicativeSubjunctive}). This sort of example has motivated many philosophers to offer non-truth-functional accounts of the English `if', including some that make it behave rather like a subjunctive conditional.\footnote{Edgington discusses Stalnaker's version of such an account in `Nearest Possible Worlds', §4.1 of her `Indicative Conditionals', cited above (\url{http://plato.stanford.edu/entries/conditionals/\#Sta}).} 
 
-The cases in \ref{crows} and \ref{n:GodParadox} are examples of the (so-called) \emph{paradoxes of material implication}. They highlight a limitation of \TFL, in that it appears not to have a conditional connective that adequately models these uses of the English `if'. But it is also a limitation of our tests for validity in English, because the test is only as good as the symbolisations we come up with as part of it. If we are not careful, we might end up mistakenly using an inadequate symbolisation, and giving the wrong verdict about some argument, thinking it valid when it is not.
+The cases in \ref{crows} and \ref{n:GodParadox} are examples of the (so-called) \emph{paradoxes of material implication}. They highlight a limitation of \TFL, in that it appears not to have a conditional connective that adequately models these uses of the English `if'. But it is also a limitation of our tests for validity in English, because the test is only as good as the symbolisations we come up with as part of it. If we are not careful, we might end up mistakenly using an inadequate symbolisation, and giving the wrong verdict about some argument, thinking it valid when it is not.  (I will return one final time to the relation between `if' and {\eif} in §\ref{cond.proof}.)
 
 
 Finally, consider the sentence:
@@ -682,11 +682,7 @@ It is so obvious, though, that \ref{n:JanBald} is synonymous with \ref{n:JanBald
 
 Because of the way we have defined valuations, \emph{every} sentence of \TFL\ is assigned either True or False in any valuation which makes it meaningful by assigning truth values to its atomic sentences. This property of \TFL\ is known as \define{bivalence}: that every sentence has exactly one of the two possible truth values. The case of Jan's baldness (or otherwise) raises the general question of what logic we should use when dealing with \emph{vague} discourse, properties like `bald' or `tall' which seem to have borderline cases. Many think it plausible that a borderline case of F is neither a case of F, nor does it fail to be a case of F. Hence they have been tempted to deny bivalence for English: `Jan is bald', they say, is neither True nor False! If $p$ is neither true nor false, then it is hardly surprising that `$p$ or not-$p$' turns out to be untrue. If these thinkers are right that vagueness in English leads to the denial of bivalence, while \TFL\ is bivalent, this will give rise to mismatches between English and \TFL. These mismatches will not involve inadequate symbolisation, but a more fundamental disagreement about the background framework – here, a disagreement about the nature of truth.\footnote{For more on the logic of vagueness, see Roy Sorensen's 2018 entry `Vagueness' in \emph{The Stanford Encyclopedia of Philosophy} (\url{https://plato.stanford.edu/entries/vagueness/}). He discusses views that deny bivalence in §5.} 
 
-In different ways, these three examples highlight some of the limits of working with a language like \TFL that can \emph{only} handle truth-functional connectives. Moreover, these limits give rise to some interesting questions in philosophical logic. Part of the purpose of this course is to equip you with the tools to explore these questions of \emph{philosophical logic}. But we have to walk before we can run; we have to become proficient in using \TFL, before we can adequately discuss its limits, and consider alternatives. (I will return one final time to the relation between `if' and {\eif} in §\ref{cond.proof}.)
-
-
-
-
+In different ways, these three examples highlight some of the limits of working with a language like \TFL that can \emph{only} handle truth-functional connectives. Moreover, these limits give rise to some interesting questions in philosophical logic. Part of the purpose of this course is to equip you with the tools to explore these questions of \emph{philosophical logic}. But we have to walk before we can run; we have to become proficient in using \TFL, before we can adequately discuss its limits, and consider alternatives. It is important to recognise that these are limits to \TFL\ only in its role as a framework to model validity in English and other natural languages. They are not problems for \TFL\ as a formal language. Moreover, as I have emphasised already, these limitations are merely manifestations of the fact that \TFL\ is being used as a model of natural language. Models are typically not designed or intended to capture every aspect of what they model. Their utility derives often from being simpler than the complex things they are representing. The limitations we have noted indicate that \TFL\ may not model English perfectly in these cases. But \TFL\ remains an adequate model of English in many other cases.  
 
 
 
@@ -694,7 +690,7 @@ In different ways, these three examples highlight some of the limits of working 
 	\item If every valuation which makes some sentences all true is also one that makes some further sentence true, then those sentences entail the further sentence. We use the symbol `$\entails$' for entailment.
 	\item We can test for entailment using truth tables, in the same sort of way that we test for consistency.
 	\item If an argument when symbolised turns out to be an entailment, then the original argument is valid in virture of its truth-functional structure. So we can test for validity using the truth table tests for entailment.
-	\item These tests nevertheless have limitations: not every valid argument can be symbolised as a \TFL\ entailment.
+	\item These tests nevertheless have limitations: not every valid argument can be symbolised as a \TFL\ entailment. These limitations are typical of using simpler models to represent complex things. 
 }
 
 
